# dji_referee_protocol

./: .gitignore  0327.md  AGENTS.md  CMakeLists.txt  README.md  package.xml  protocol.md  setup.cfg  setup.py
config/: topic_config.yaml
dji_referee_protocol/: __init__.py  crc_utils.py  data_types.py  protocol_constants.py  protocol_parser.py  referee_serial_node.py  referee_ui_node.py  ui_protocol.py
launch/: referee_serial_launch.py
msg/: AllowedShoot.msg  Constants.msg  Constraints.msg  DamageState.msg  DartLaunchData.msg  DartOperatorCmd.msg  EnemyAmmo.msg  EnemyBuff.msg  EnemyHP.msg  EnemyJammingKey.msg  EnemyPosition.msg  EnemyTeamStatus.msg  FieldEvent.msg  GameResult.msg  GameStatus.msg  GroundRobotPosition.msg  MapClickData.msg  MapPathData.msg  MapRadarData.msg  MapRobotData.msg  RFIDStatus.msg  RadarDecisionSync.msg  RadarMarkProgress.msg  ReadSuperCap.msg  RefereeWarning.msg  RobotBuff.msg  RobotHP.msg  RobotHeat.msg  RobotPerformance.msg  RobotPosition.msg  SelfColor.msg  SentryDecisionSync.msg  ShootData.msg  UnifiedInput.msg
scripts/: referee_serial_node  referee_ui_node
test/: test_serial_direct.py  test_topic_config.py  test_topics.py  test_ui_protocol.py
